# delivery-route-openenv

./: .dockerignore  .env.example  Dockerfile  README.md  gradio_app.py  hf_space.json  inference.py  openenv.yaml  pyproject.toml  requirements.txt
app/: __init__.py  env.py  grader.py  main.py  tasks.py
server/: app.py
