[project]
name = "delivery-route-openenv"
version = "0.1.0"
description = "OpenEnv RL environment for delivery route optimization"
authors = [
    { name = "Vishal Singh" }
]
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn>=0.27.0",
    "pydantic>=2.5.3",
    "numpy>=1.26.3",
    "httpx>=0.26.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
llm = [
    "openai>=1.12.0",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]
